--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://adityalohar.github.io/Portfolio24",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "gh-pages": "^6.1.1",
     "nodemailer": "^6.9.7",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -27,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
